--- a/charts/she-runtime/values.yaml
+++ b/charts/she-runtime/values.yaml
@@ -12,6 +12,10 @@ sealedSecrets:
     repoURL: https://charts.bitnami.com/bitnami
     targetRevision: 1.5.2
     chart: sealed-secrets
+    helm:
+      parameters:
+        - name: skipRecreate
+          value: 'true'
 
 postgresOperator:
   namespace: postgres-operator
