use a default selector
use a default selector that is not dependant on the release name

--- a/charts/she-runtime/templates/prometheus.yaml
+++ b/charts/she-runtime/templates/prometheus.yaml
@@ -220,10 +220,20 @@ spec:
                     target_label: schemaname
                     replacement: '$1'
               {{- end }}
-            {{- if .prometheus.serviceMonitorSelectors }}
             serviceMonitorSelector:
+            {{- if .prometheus.serviceMonitorSelectors }}
               {{- toYaml .prometheus.serviceMonitorSelectors | nindent 14 }}
-            {{- end }}              
+            {- else }}
+              matchLabels:
+                kubernetes.she.net/prometheus-instance: default
+            {{- end }} 
+            podMonitorSelector:
+            {{- if .prometheus.podMonitorSelectors }}
+              {{- toYaml .prometheus.podMonitorSelectors | nindent 14 }}
+            {- else }}
+              matchLabels:
+                kubernetes.she.net/prometheus-instance: default
+            {{- end }} 
             {{- if .prometheus.additionalAlertManagerConfigs }}
             additionalAlertManagerConfigs:
               {{- toYaml .prometheus.additionalAlertManagerConfigs | nindent 14 }}
