--- a/charts/she-runtime/values.yaml
+++ b/charts/she-runtime/values.yaml
@@ -103,7 +103,10 @@ prometheusOperator:
       enabled: true
 #    serviceMonitorSelectors:
 #      matchLabels:
-#        prometheus: she
+#        kubernetes.she.net/prometheus-instance: default
+#    podMonitorSelectors:
+#      matchLabels:
+#        kubernetes.she.net/prometheus-instance: default
     ingress: {}
     # ingress:
       # enabled: true
