set commonLabels to empty map to simplify template

--- a/charts/she-runtime/templates/prometheus.yaml
+++ b/charts/she-runtime/templates/prometheus.yaml
@@ -14,7 +14,7 @@ spec:
     helm:
       values: |
         commonLabels:
-          {{- dict "kubernetes.she.net/prometheus-instance" "default" | merge (.commonLabels | default dict) | toYaml | nindent 10 }} 
+          {{- dict "kubernetes.she.net/prometheus-instance" "default" | merge .commonLabels | toYaml | nindent 10 }} 
         {{- with .coreDns }}
         coreDns:
           {{- toYaml . | nindent 10 }}
