--- a/charts/she-runtime/values.yaml
+++ b/charts/she-runtime/values.yaml
@@ -99,6 +99,8 @@ prometheusOperator:
     #   defaultMode: 0440
   prometheus:
     enabled: true
+    commonLabels: {}
+#      labelKey: labelValue
     crunchyPostgresExporter:
       enabled: true
 #    serviceMonitorSelectors:
