--- a/charts/she-runtime/values.yaml
+++ b/charts/she-runtime/values.yaml
@@ -109,6 +109,9 @@ prometheusOperator:
 #    podMonitorSelectors:
 #      matchLabels:
 #        kubernetes.she.net/prometheus-instance: default
+#    ruleSelectors:
+#      matchLabels:
+#        kubernetes.she.net/prometheus-instance: default
     ingress: {}
     # ingress:
       # enabled: true
