Use kubernetes.she.net/prometheus-instance label for detection (#36)
* use a default selector

use a default selector that is not dependant on the release name

* add commonLables and merge with other commonlabels

* set commonLabels to empty map to simplify template

* select rules by new label

* update changelog

---------

Co-authored-by: kstiehlshe <kevin.stiehl@she.net>

--- a/charts/she-runtime/templates/prometheus.yaml
+++ b/charts/she-runtime/templates/prometheus.yaml
@@ -13,6 +13,8 @@ spec:
     chart: {{ .source.chart }}
     helm:
       values: |
+        commonLabels:
+          {{- dict "kubernetes.she.net/prometheus-instance" "default" | merge .commonLabels | toYaml | nindent 10 }} 
         {{- with .coreDns }}
         coreDns:
           {{- toYaml . | nindent 10 }}
@@ -220,10 +222,27 @@ spec:
                     target_label: schemaname
                     replacement: '$1'
               {{- end }}
-            {{- if .prometheus.serviceMonitorSelectors }}
             serviceMonitorSelector:
+            {{- if .prometheus.serviceMonitorSelectors }}
               {{- toYaml .prometheus.serviceMonitorSelectors | nindent 14 }}
-            {{- end }}              
+            {- else }}
+              matchLabels:
+                kubernetes.she.net/prometheus-instance: default
+            {{- end }} 
+            podMonitorSelector:
+            {{- if .prometheus.podMonitorSelectors }}
+              {{- toYaml .prometheus.podMonitorSelectors | nindent 14 }}
+            {- else }}
+              matchLabels:
+                kubernetes.she.net/prometheus-instance: default
+            {{- end }} 
+            ruleSelector:
+            {{- if .prometheus.ruleSelectors }}
+              {{- toYaml .prometheus.ruleSelectors | nindent 14 }}
+            {- else }}
+              matchLabels:
+                kubernetes.she.net/prometheus-instance: default
+            {{- end }} 
             {{- if .prometheus.additionalAlertManagerConfigs }}
             additionalAlertManagerConfigs:
               {{- toYaml .prometheus.additionalAlertManagerConfigs | nindent 14 }}
