--- a/charts/she-runtime/values.yaml
+++ b/charts/she-runtime/values.yaml
@@ -237,3 +237,11 @@ kyvernoPolicies:
     chart: kyverno-policies
     targetRevision: 0.0.2
 
+trivy-operator:
+  enabled: false
+  namespace: trivy-operator
+  name: trivy-operator
+  source:
+    repoURL: https://aquasecurity.github.io/helm-charts/
+    chart: trivy-operator
+    targetRevision: 0.18.1
