--- a/charts/she-runtime/values.yaml
+++ b/charts/she-runtime/values.yaml
@@ -245,3 +245,11 @@ trivy-operator:
     repoURL: https://aquasecurity.github.io/helm-charts/
     chart: trivy-operator
     targetRevision: 0.18.1
+    helm:
+      values: |
+        serviceMonitor:
+          enabled: true
+          labels:
+            prometheusOperator.prometheus.serviceMonitorSelectors.matchLabels.kubernetes.she.net/prometheus-instance: default
+        trivy:
+          ignoreUnfixed: true
