enable vuln id metrics and disable ignore unfixed

--- a/charts/she-runtime/values.yaml
+++ b/charts/she-runtime/values.yaml
@@ -252,4 +252,6 @@ trivy-operator:
           labels:
             kubernetes.she.net/prometheus-instance: default
         trivy:
-          ignoreUnfixed: true
+          ignoreUnfixed: false
+        operator:
+          metricsVulnIdEnabled: true
