Made global section of prometheusOperator configurable

--- a/charts/she-runtime/values.yaml
+++ b/charts/she-runtime/values.yaml
@@ -50,6 +50,7 @@ prometheusOperator:
   namespace: monitoring
   name: prom-operator
   enabled: true
+  global: {}
   commonLabels: {}
 #    labelKey: labelValue
   ingress:
