--- a/charts/she-runtime/templates/prometheus.yaml
+++ b/charts/she-runtime/templates/prometheus.yaml
@@ -57,16 +57,9 @@ spec:
         {{- end }}
         {{- if .alertmanager.enabled }}
         alertmanager:
-          {{- if or .alertmanager.secrets .alertmanager.alertmanagerSpec.storage }}
+          {{- with .alertmanager.alertmanagerSpec }}
           alertmanagerSpec:
-            {{- with .alertmanager.secrets }}
-            secrets:
-              {{- toYaml . | nindent 14 }}
-            {{- end }}
-            {{- with .alertmanager.alertmanagerSpec.storage }}
-            storage:
-              {{- toYaml . | nindent 14 }}
-            {{- end }}
+            {{- toYaml . | nindent 12 }}
           {{- end }}
           {{- if .alertmanager.config }}
           config:
