--- a/charts/she-runtime/templates/prometheus.yaml
+++ b/charts/she-runtime/templates/prometheus.yaml
@@ -92,7 +92,7 @@ spec:
           {{- if .grafana.ingress.enabled | default .ingress.enabled }}
           serviceMonitor:
             labels:
-              kubernetes.she.net/prometheus-instance=default
+              kubernetes.she.net/prometheus-instance: default
           ingress:
             ingressClassName: {{ .grafana.ingress.className }}
             enabled: true
