add serviceMonitor label to scrape metrics for kube-state-metrics

--- a/charts/she-runtime/templates/prometheus.yaml
+++ b/charts/she-runtime/templates/prometheus.yaml
@@ -21,6 +21,9 @@ spec:
         {{- end }}
         {{- with .kubeStateMetrics }}
         kube-state-metrics:
+          serviceMonitor:
+            labels:
+              kubernetes.she.net/prometheus-instance: default
           {{- toYaml . | nindent 10 }}
         {{- end }}
         {{- with .coreDns }}
