added cluster specific name for trivy dashboard

--- a/charts/she-runtime/templates/grafana-dashboard-trivy.yaml
+++ b/charts/she-runtime/templates/grafana-dashboard-trivy.yaml
@@ -6,7 +6,7 @@ kind: ConfigMap
 metadata:
   labels:
     grafana_dashboard: "1"
-  name: grafana-trivy-dashboard
+  name: {{ include "argo.targetCluster.name" $ }}-grafana-trivy-dashboard
   namespace: monitoring
 data:
   "grafana-trivy-dashbaord": |
