add scrape metrics to velero in template as default

--- a/charts/she-runtime/templates/velero.yaml
+++ b/charts/she-runtime/templates/velero.yaml
@@ -27,6 +27,8 @@ spec:
           serviceMonitor:
             enabled: true
             namespace: monitoring
+            additionalLabels:
+              kubernetes.she.net/prometheus-instance: default
         {{- with .resources }}
         resources:
         {{- toYaml . | nindent 10 }}
