--- a/charts/grafana-dashboards/Chart.yaml
+++ b/charts/grafana-dashboards/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: grafanaDashoards
+name: grafana-dashboards
 description: A collection of Dashboards for grafana
 type: application
-version: 0.0.1
-appVersion: "0.0.1"
+version: 0.0.2
+appVersion: "0.0.2"
