--- a/charts/she-runtime/values.yaml
+++ b/charts/she-runtime/values.yaml
@@ -283,3 +283,30 @@ grafanaDashboards:
     #     grafanaDashboard:
     #       trivy:
     #         enabled: false
+
+argoWorkflow:
+  enabled: false
+  namespace: argo-workflows
+  name: argo-workflows
+  source:
+    repoURL: https://argoproj.github.io/argo-helm
+    chart: argo-workflows
+    targetRevision: 0.38.0
+    helm:
+      values: |
+        controller:
+          metricsConfig:
+            enabled: true
+          telemetryConfig:
+            enabled: true
+          serviceMonitor:
+            enabled: true
+            additionalLabels:
+              kubernetes.she.net/prometheus-instance: default
+            namespace: "monitoring"
+        workflow:
+          serviceAccount:
+            create: true
+            name: "argo-workflows"
+        server:
+          authMode: "server"
