SHE Runtime: add MinIO Operator (#59)
* SHE Runtime: add MinIO Operator

---------

Co-authored-by: Florian Degner <florian.degner@she.net>

--- a/charts/she-runtime/values.yaml
+++ b/charts/she-runtime/values.yaml
@@ -310,3 +310,24 @@ argoWorkflow:
             name: "argo-workflows"
         server:
           authMode: "server"
+
+minioOperator:
+  enabled: false
+  namespace: minio-operator
+  name: minio-operator
+  source:
+    repoURL: https://operator.min.io
+    chart: operator
+    targetRevision: 5.0.9
+    # helm:
+    #   values: |
+    #     console:
+    #       ingress:
+    #         enabled: true
+    #         ingressClassName: nginx-internal
+    #         host: # ...
+    #     operator:
+    #       env:
+    #         - name: PROMETHEUS_NAMESPACE
+    #           value: monitoring
+
