--- a/charts/she-runtime/values.yaml
+++ b/charts/she-runtime/values.yaml
@@ -277,12 +277,15 @@ grafanaDashboards:
   source:
     repoURL: https://she-informationstechnologie.github.io/charts
     chart: grafana-dashboards
-    targetRevision: 0.0.4
+    targetRevision: 0.0.5
     # helm:
     #   values: |
     #     grafanaDashboard:
     #       trivy:
     #         enabled: false
+    #       minio:
+    #         enabled: false
+
 
 argoWorkflow:
   enabled: false
