Add monitoring rules for minio

--- a/charts/monitoring-rules/values.yaml
+++ b/charts/monitoring-rules/values.yaml
@@ -86,11 +86,13 @@ minio:
     # clusterDiskOffline: false
     # nodeDiskOffline: false
     # diskSpaceUsage: false
+    # diskSpaceUsageCritical: false
+    # queuedBytes: false
+    # linkOffline: false
 
 # Trivy Operator Dashboards
 trivy:
   enabled: false
-
   # deploy dashboard
   grafanaDashboards:
     enabled: true
