--- a/.github/workflows/helm-docs.yaml
+++ b/.github/workflows/helm-docs.yaml
@@ -18,4 +18,4 @@ jobs:
       - run: |
           find ./charts -type f -name README.md -exec sed -i '$ d' {} \;
           git add -N .
-          git diff --quiet || (echo '::error::Please make sure that the README.md is up to date' && exit 1)
+          git diff || (echo '::error::Please make sure that the README.md is up to date' && exit 1)
